Fix z-index at Navbar issue from video-tutorials

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -133,6 +133,7 @@ html[data-theme='dark'] .DocSearch {
 
 .navbar {
   background-color:  #0e1217;
+  z-index: 9999;
 }
 
 html[data-theme='light'] .navbar{
